k8s/it-tools/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: it-tools
  labels:
    app: it-tools
spec:
  replicas: 1
  selector:
    matchLabels:
      app: it-tools
  template:
    metadata:
      name: it-tools
      labels:
        app: it-tools
    spec:
      containers:
        - name: it-tools
          image: ghcr.io/corentinth/it-tools:2024.5.13-a0bc346
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP
          env: []
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              cpu: 50m
              memory: 32Mi
          livenessProbe:
            httpGet:
              port: 80
              path: /
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              port: 80
              path: /
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
              add:
                - CHOWN
                - SETGID
                - SETUID
                - NET_BIND_SERVICE
      restartPolicy: Always
