k8s/it-tools/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: it-tools
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`it-tools.anshulg.com`)
      middlewares:
        - name: security-headers
          namespace: traefik
        - name: cache-headers
          namespace: traefik
        - name: compression
          namespace: traefik
      services:
        - name: it-tools
          port: 80
  tls:
    secretName: it-tools-cert-tls
    domains:
      - main: it-tools.anshulg.com
